// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render button with children 1`] = `
<button
  class="ar-button ar-button--default ar-button-- ar-button--middle ar-button--loading"
  type="button"
>
  children
</button>
`;

exports[`<Button /> should render button with className 1`] = `
<button
  class="ar-button ar-button--default ar-button-- ar-button--middle ar-button--loading test"
  type="button"
>
  className
</button>
`;

exports[`<Button /> should render button with disabled 1`] = `
<button
  class="ar-button ar-button--default ar-button-- ar-button--middle ar-button--loading ar-button--disabled"
  type="button"
>
  disabled
</button>
`;

exports[`<Button /> should render button with disabled 2`] = `
<button
  class="ar-button ar-button--default ar-button-- ar-button--middle ar-button--loading"
  type="button"
>
  not disabled
</button>
`;

exports[`<Button /> should render button with loading 1`] = `
<button
  class="ar-button ar-button--default ar-button-- ar-button--middle ar-button--loading"
  type="button"
>
  loading
</button>
`;

exports[`<Button /> should render button with loading 2`] = `
<button
  class="ar-button ar-button--default ar-button-- ar-button--middle"
  type="button"
>
  not loading
</button>
`;

exports[`<Button /> should render button with onClick 1`] = `
<button
  class="ar-button ar-button--default ar-button-- ar-button--middle ar-button--loading"
  type="button"
>
  onClick
</button>
`;

exports[`<Button /> should render button with style 1`] = `
<button
  class="ar-button ar-button--default ar-button-- ar-button--middle ar-button--loading"
  style="color: red;"
  type="button"
>
  style
</button>
`;

exports[`<Button /> should render default 1`] = `
<div>
  <button
    class="ar-button ar-button--default ar-button-- ar-button--middle ar-button--loading"
    type="button"
  >
    default
  </button>
</div>
`;
